# TritonASTLLVMIRTranslator

./: CMakeLists.txt  README.md  Translator.cpp  Translator.h  Translator.hpp  main.cpp
Scripts/scripts/: FindBoost.cmake  FindCapstone.cmake  FindTriton.cmake  buildCapstone.py  buildLLVM.py  buildTriton.py  utils.py
